fix java deprecation notices