@@ -1,33 +1,13 @@
-/*
- * VS-Simulator (http://buetow.org)
- * Copyright (c) 2008 - 2009 by Dipl.-Inform. (FH) Paul C. Buetow
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
- *
- * All icons of the icons/ folder are 	under a Creative Commons
- * Attribution-Noncommercial-Share Alike License a CC-by-nc-sa.
- *
- * The icon's homepage is http://code.google.com/p/ultimate-gnome/
- */
-
 package events.internal;
 
-import java.io.*;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
 
 import core.VSInternalProcess;
-import events.*;
+import events.VSAbstractEvent;
+import events.VSCopyableEvent;
+import events.VSRegisteredEvents;
 import protocols.VSAbstractProtocol;
 import serialize.VSSerialize;
 
@@ -42,9 +22,6 @@ import serialize.VSSerialize;
  */
 public class VSProtocolEvent extends VSAbstractInternalEvent
             implements VSCopyableEvent {
-    /** The serial version uid */
-    private static final long serialVersionUID = 1L;
-
     /** The protocol classname. */
     private String protocolClassname;
 
@@ -160,21 +137,20 @@ public class VSProtocolEvent extends VSAbstractInternalEvent
         super.serialize(serialize, objectOutputStream);
 
         /** For later backwards compatibility, to add more stuff */
-        objectOutputStream.writeObject(new Boolean(false));
+        objectOutputStream.writeObject(Boolean.valueOf(false));
 
         objectOutputStream.writeObject(protocolClassname);
-        objectOutputStream.writeObject(new Boolean(isClientProtocol));
-        objectOutputStream.writeObject(new Boolean(isProtocolActivation));
+        objectOutputStream.writeObject(Boolean.valueOf(isClientProtocol));
+        objectOutputStream.writeObject(Boolean.valueOf(isProtocolActivation));
 
         /** For later backwards compatibility, to add more stuff */
-        objectOutputStream.writeObject(new Boolean(false));
+        objectOutputStream.writeObject(Boolean.valueOf(false));
     }
 
     /* (non-Javadoc)
      * @see serialize.VSSerializable#deserialize(serialize.VSSerialize,
      *	java.io.ObjectInputStream)
      */
-    @SuppressWarnings("unchecked")
     public synchronized void deserialize(VSSerialize serialize,
                                          ObjectInputStream objectInputStream)
     throws IOException, ClassNotFoundException {
