@@ -1,34 +1,11 @@
-/*
- * Copyright (c) 2008 Paul C. Buetow, vs-sim@dev.buetow.org
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
- *
- * All icons of the icons/ folder are 	under a Creative Commons
- * Attribution-Noncommercial-Share Alike License a CC-by-nc-sa.
- *
- * The icon's homepage is http://code.google.com/p/ultimate-gnome/
- */
-
 package protocols.implementations;
-
-import protocols.VSAbstractProtocol;
-import core.VSMessage;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Vector;
+
+import core.VSMessage;
+import protocols.VSAbstractProtocol;
 
 /**
  * The class VSBerkelyTimeProtocol, an implementation of the berkely time
@@ -37,8 +14,6 @@ import java.util.Vector;
  * @author Paul C. Buetow
  */
 public class VSBerkelyTimeProtocol extends VSAbstractProtocol {
-    private static final long serialVersionUID = 1L;
-
     /**
      * Instantiates a new berkely time protocol.
      */
@@ -115,10 +90,10 @@ public class VSBerkelyTimeProtocol extends VSAbstractProtocol {
         else
             return; /* Process has been handled already or is not listed */
 
-        Long time = new Long(recvMessage.getLong("time"));
+        Long time = Long.valueOf(recvMessage.getLong("time"));
 
         processTimes.put(processID, time);
-        recvTimes.put(processID, new Long(process.getTime()));
+        recvTimes.put(processID, Long.valueOf(process.getTime()));
 
         /* All peers have told their times */
         if (peers.size() == 0) {
@@ -151,7 +126,7 @@ public class VSBerkelyTimeProtocol extends VSAbstractProtocol {
             Long recvTime = recvTimes.get(processID);
             long rtt = recvTime.longValue() - requestTime;
             long realProcessTime = localTime + (long) (rtt / 2);
-            realTimesRTT.put(processID, new Long(realProcessTime));
+            realTimesRTT.put(processID, Long.valueOf(realProcessTime));
             sum += realProcessTime;
         }
         /* Include the time of the local process */
